--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,21 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            login_throttling: null
+            form_login:
+                # "app_login" is the name of the route created previously
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
+            logout:
+                path: app_logout
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: [ ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
+        password_hashers:
+            # auto hasher with default options for the User class (and children)
+            App\Entity\User: 'auto'
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -26,8 +41,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: '^/admin/users', roles: ROLE_SUPER_ADMIN }
+        - { path: '^/admin', roles: ROLE_ADMIN }
 
 when@test:
     security:
