--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,7 @@ twig:
 when@test:
     twig:
         strict_variables: true
+    filters:
+        pdf:
+            class: Dompdf\Twig\DompdfFilter
+            public: false
